Saved progress in Jupyter Notebook

--- a/Twitter_Sentiment_Trading_Strategy.ipynb
+++ b/Twitter_Sentiment_Trading_Strategy.ipynb
@@ -3918,11 +3918,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git add your_notebook.ipynb"
+    "!git remote add origin https://github.com/Ilse-hutten/2025_04_Tweet_scraping.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) 1e82bb8] Saved progress in Jupyter Notebook\r\n",
+      " 1 file changed, 5371 insertions(+)\r\n",
+      " create mode 100644 Twitter_Sentiment_Trading_Strategy.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add Twitter_Sentiment_Trading_Strategy.ipynb\n",
+    "!git commit -m \"Saved progress in Jupyter Notebook\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remote: Repository not found.\r\n",
+      "fatal: repository 'https://github.com/Ilse-hutten/2025_04_Tweet_scraping.git/' not found\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\thttps://github.com/Ilse-hutten/2025_04_Tweet_scraping.git (fetch)\r\n",
+      "origin\thttps://github.com/Ilse-hutten/2025_04_Tweet_scraping.git (push)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote -v"
    ]
   },
   {
