Saved progress in Jupyter Notebook

--- a/Twitter_Sentiment_Trading_Strategy.ipynb
+++ b/Twitter_Sentiment_Trading_Strategy.ipynb
@@ -3918,25 +3918,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git remote add origin https://github.com/Ilse-hutten/2025_04_Tweet_scraping.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master (root-commit) 1e82bb8] Saved progress in Jupyter Notebook\r\n",
-      " 1 file changed, 5371 insertions(+)\r\n",
-      " create mode 100644 Twitter_Sentiment_Trading_Strategy.ipynb\r\n"
+      "error: remote origin already exists.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote add origin https://github.com/Ilse-hutten/Tweet_scraping.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master c01b545] Saved progress in Jupyter Notebook\r\n",
+      " 1 file changed, 60 insertions(+), 2 deletions(-)\r\n"
      ]
     }
    ],
@@ -3947,7 +3954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 235,
    "metadata": {
     "scrolled": true
    },
@@ -3956,18 +3963,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Repository not found.\r\n",
-      "fatal: repository 'https://github.com/Ilse-hutten/2025_04_Tweet_scraping.git/' not found\r\n"
+      "error: src refspec main does not match any\r\n",
+      "\u001b[31merror: failed to push some refs to 'https://github.com/Ilse-hutten/2025_04_Tweet_scraping.git'\r\n",
+      "\u001b[m"
      ]
     }
    ],
    "source": [
-    "!git push origin master"
+    "!git push origin main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
